# Auris-Game-Engine

./: .gitignore  CMakeLists.txt  Doxyfile  GoldEngine.files  GoldEngine.includes  gravatarfetch.pl
Auris/: CMakeLists.txt
Auris/src/Auris/: Auris.hpp  Engine.cpp  Game.cpp
Auris/src/Auris/Entities/: AudioPlayer.cpp  Camera.cpp  Light.cpp  PhysicsEntity.cpp
Auris/src/Auris/Entities/Nuggets/: Animation.cpp  Sprite.cpp  SpriteSheet.cpp  Transform.cpp
Auris/src/Auris/GameObjects/: Camera.cpp  GameObject.cpp  GameObject.hpp
Auris/src/Auris/GameObjects/Components/: Animation.cpp  Material.hpp  Sprite.cpp  Sprite.hpp  SpriteSheet.cpp
Auris/src/Auris/Systems/: Input.cpp  ParticleSystem.hpp  RenderSystem.cpp
Auris/src/Auris/Testing/: DebugDraw.hpp  DebugUI.cpp
Auris/src/Auris/Utilities/: AssetManager.cpp  AssetSystem.cpp  AudioPlayer.cpp  MemoryLeakDetector.cpp  Shader.cpp  SpriteSheet.cpp
Auris/src/Auris/Utility/: BodyStandard.hpp  MemoryLeakDetector.cpp
ClassExercises/Box2D/: CMakeLists.txt
ClassExercises/Box2D/src/: Box2DTest.cpp  Box2DTest.hpp  main.cpp
ClassExercises/SceneGraph/: .gitignore  CMakeLists.txt  Exercise10.files
ClassExercises/SceneGraph/exercise/: CMakeLists.txt  Ex10.files
ClassExercises/SceneGraph/src/: Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  SceneParser.cpp  SceneParser.hpp
Demos/: CMakeLists.txt
Demos/Audio/: CMakeLists.txt
Demos/Audio/src/: main.cpp  (+3 more)
Demos/ParticleSystem/: CMakeLists.txt
Demos/ParticleSystem/src/: ParticleDemo.hpp  main.cpp
Demos/Sprite/: CMakeLists.txt
Game/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Game/data/: car_house_tree.json  mathfuncs.py  player.json
Game/src/: Bullet.hpp  Crosshair.hpp  DemoGame.hpp  Grenade.hpp  Player.hpp  Test.hpp  Wall.hpp  main.cpp
cmake/: FindSRE.cmake
data/: PlayerController.h  script_template.h
docs/: Diagrams.asta
docs/html/: _action_8hpp.html  _action_8hpp.js  _animation_8cpp.html  _animation_8hpp.html  _asset_manager_8cpp.html  _asset_manager_8hpp.html  _asset_manager_8hpp.js  _asset_manager_8hpp_a006781b79b0d8dc0c4c8678c2ad3c7cf.html  _asset_manager_8hpp_a0190411f5a364d87e1698a7fc360f1ba.html  _asset_manager_8hpp_a16c4405bc095493958678def78ae91e9.html  _asset_manager_8hpp_a2e0bb43c84acfcc43f8ebce36f5eaad3.html  _asset_manager_8hpp_a477268f1d61697fed67177e5a4b0f022.html  _asset_manager_8hpp_a47cf1c93c72ccb806ab3ba785486922b.html  _asset_manager_8hpp_a58821918c6afc220b8a25fd3e9901d44.html  _asset_manager_8hpp_a97b7a86271897b61288bcef35df8be71.html  _asset_manager_8hpp_ae4fe1d3f714113812a73c83a441090f0.html  _asset_manager_8hpp_af59e40073e38d3bec0b472e6d560cd5d.html  _audio_player_8cpp.html  _audio_player_8hpp.html  _audio_player_8hpp.js  _audio_player_8hpp_a09836476cb254a8bfd8e144c62db6b06.html  _audio_player_8hpp_a0a09de49eaf498307ecf1193a2ba2ad9.html  _audio_player_8hpp_a0bb2dfc6324d0ac2a5f9b83148d3710c.html  _audio_player_8hpp_a2b4a1455dce73e1186bbf2020a9ce002.html  _audio_player_8hpp_a2dd6b8849a274a8a95bb034e32adfd99.html  _audio_player_8hpp_a3a878924d8438918d9769675d473b165.html  _audio_player_8hpp_a42be3a37ec7fe01679b69c17004dec32.html  _audio_player_8hpp_a4a99373aca91d99b5b9ecf6f8e30b97e.html  _audio_player_8hpp_a4e21beefadc86b8eca7304640f0db524.html  _audio_player_8hpp_a507f135881e89679133b2a81d74abff2.html  _audio_player_8hpp_a5954d2b12816d71e9368453dafaafb64.html  _audio_player_8hpp_a59b5a376b3a7b173a71220cfcd24d9d9.html  _audio_player_8hpp_a616c23dc01f67f0d284044acfb160086.html  _audio_player_8hpp_a627c12924294173b6f8409a90e07b980.html  _audio_player_8hpp_a6a2203698778ad758c38a119ffdf6b76.html  _audio_player_8hpp_a6af36b0fb7714db28486b4fbf23ca1c8.html  _audio_player_8hpp_a7473e9a04dc2e8f05241857d86586194.html  _audio_player_8hpp_a7d696a044bff4bcfdcaa78f21b4e152a.html  _audio_player_8hpp_a82f9bee96ae329de7347cb12589a44fc.html  _audio_player_8hpp_a91417060f572c27ba818b88f36ea78cf.html  (+1006 more)
docs/xml/: _action_8hpp.xml  _animation_8cpp.xml  _animation_8hpp.xml  _asset_manager_8cpp.xml  _asset_manager_8hpp.xml  _audio_player_8cpp.xml  _audio_player_8hpp.xml  _body_standard_8hpp.xml  _camera_8cpp.xml  _camera_8hpp.xml  _collision_handler_8hpp.xml  _constants_8hpp.xml  _convert_8hpp.xml  _debug_draw_8hpp.xml  _debug_u_i_8cpp.xml  _debug_u_i_8hpp.xml  _dynamic_pool_8hpp.xml  _engine_8cpp.xml  _engine_8hpp.xml  _entities_2_audio_player_8hpp.xml  _entity_8hpp.xml  _game_8cpp.xml  _game_8hpp.xml  _input_8cpp.xml  _input_8hpp.xml  _interpolation_8hpp.xml  _light_8cpp.xml  _light_8hpp.xml  _material_8hpp.xml  _memory_leak_detector_8cpp.xml  _memory_leak_detector_8hpp.xml  _mesh_8hpp.xml  _nugget_8hpp.xml  _particle_system_8hpp.xml  _physics_entity_8cpp.xml  _physics_entity_8hpp.xml  _pool_8hpp.xml  _profiling_timer_8hpp.xml  _render_system_8cpp.xml  _render_system_8hpp.xml  (+87 more)
engine/: CMakeLists.txt
engine/src/: Auris.cpp  Auris.hpp  Game.hpp
game/: CMakeLists.txt
game/data/: level1.hpp  level2.hpp
game/src/: DemoGame.hpp  main.cpp
include/Auris/: Action.hpp  Auris.hpp  Constants.hpp  Engine.hpp  Entity.hpp  Game.hpp
src/: Animation.cpp  Animation.hpp  Auris.cpp  Auris.cpp.autosave  Auris.hpp  Constants.hpp  DebugDraw.hpp  DemoGame.hpp  Engine.cpp  Engine.hpp  Game.hpp  GameObject.cpp  GameObject.hpp  GoldEngine.cpp  GoldEngine.hpp  Input.cpp  Input.hpp  Keys.cpp  Keys.hpp  Material.hpp  MemoryLeakDetector.cpp  MemoryLeakDetector.hpp  RenderSystem.cpp  RenderSystem.cpp.autosave  RenderSystem.hpp  Scene.hpp  SceneGraphImporter.cpp  SceneGraphImporter.hpp  SpriteSheet.cpp  SpriteSheet.hpp  collisionhandler.cpp  collisionhandler.h  main.cpp  main.cpp.autosave
src/Auris/: Auris.hpp
src/Components/: CDynamicBody.hpp  CFixedBody.hpp  CRender.cpp  CRender.hpp  CSprite.cpp  CSprite.hpp  CTransform.cpp  CTransform.hpp  Component.hpp
src/GameObjects/: GameObject.cpp  GameObject.hpp  Player.hpp  Wall.hpp
src/Systems/: CollisionHandler.hpp  ParticleSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SceneParser.hpp  SceneParser.hpp.autosave
src/Utility/: Interpolation.hpp  MemoryLeakDetector.cpp  MemoryLeakDetector.hpp  Pool.hpp
(+211 files in other folders)
